bk_ida/gccida/g0/decode_reg_name
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/decode_reg_name/src/varasm.c:1226:46: error: use of undeclared identifier 'sch_istable'; did you mean '_sch_istable'?
for ( i = strlen( asmspeca) - 1; i >= 0 && ( sch_istable[( unsigned __int8)asmspeca[i]] & 4) != 0; --i ) 
                                             ^~~~~~~~~~~
                                             _sch_istable
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/decode_reg_name/src/safe-ctype.h:72:29: note: '_sch_istable' declared here
extern const unsigned short _sch_istable[256];
                            ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/decode_reg_name/src/varasm.c:1249:25: error: use of undeclared identifier 'table_20'
if ( !strcmp( asmspeca, table_20[ic].name) ) 
                        ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/decode_reg_name/src/varasm.c:1250:8: error: use of undeclared identifier 'table_20'
return table_20[ic].number; 
       ^
3 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/decode_reg_name/src/obj/varasm.o] Error 1
